# PerspectiveGap-inspect

./: .gitignore  LICENSE  README.md  pyproject.toml
src/perspective_gap_inspect/: __init__.py  eval.yaml  prompt_writing.py  role_assignment.py  scorers.py  tasks.py
